--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+org.gradle.jvmargs=-XX\:MaxHeapSize\=1024m -Xmx1024m
+#org.gradle.jvmargs=-Xmx2048m
